--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
 
     <com.ldoublem.PaperShredderlib.PaperShredderView
         android:layout_width="200dp"
-        android:visibility="gone"
         android:id="@+id/ps_delete"
         android:layout_height="220dp"/>
 
@@ -22,16 +21,16 @@
         android:layout_width="200dp"
         android:id="@+id/ps_delete2"
         android:layout_height="220dp"
-        paper:sherderBgColor="#888888"
-        paper:sherderText="清除中"
-        paper:sherderType="0"
-        paper:sherderPaperEnterColor="#353535"
-        paper:sherderTextShadow="true"
-        paper:sherderTextColor="#ecf0f1"
-        paper:sherderPaperColor="#9d55b8"
-        paper:sherderProgress="false"
-      />
 
+      />
+    <!--paper:sherderBgColor="#888888"-->
+    <!--paper:sherderText="清除中"-->
+    <!--paper:sherderType="0"-->
+    <!--paper:sherderPaperEnterColor="#353535"-->
+    <!--paper:sherderTextShadow="true"-->
+    <!--paper:sherderTextColor="#ecf0f1"-->
+    <!--paper:sherderPaperColor="#9d55b8"-->
+    <!--paper:sherderProgress="false"-->
 
 
 </LinearLayout>
